--- a/week1/TodoListStyle.css
+++ b/week1/TodoListStyle.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 header {
@@ -8,7 +9,7 @@ header {
   justify-content: center;
   align-items: center;
 
-  background-color: rgba(223, 153, 255, 0.788);
+  background-color: rgb(255, 199, 153);
 
   height: 100px;
   width: 100%;
@@ -24,13 +25,11 @@ nav {
   gap: 10px;
 
   padding: 10px;
-
-  border-bottom: 2px solid black;
 }
 
 nav > button {
   border: 0;
-  background-color: rgba(223, 153, 255, 0.788);
+  background-color: rgb(255, 199, 153);
   padding: 5px;
   border-radius: 10px;
 
@@ -40,11 +39,82 @@ nav > button {
 main {
   display: flex;
   flex-direction: row;
+
+  border-top: 2px solid black;
 }
 
 main > section {
   width: 50%;
-  margin-left: 20px;
+  height: 75vh;
+  margin-left: 25px;
+  padding-top: 15px;
+}
+
+main > .left-section {
+  border-right: 2px solid black;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin: 10px;
+  list-style: none;
+}
+
+ul > li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 90%;
+  padding: 10px;
+  border-bottom: 2px solid black;
+}
+
+li > button {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+
+  color: red;
+  font-size: large;
+
+  cursor: pointer;
+}
+
+.new-todo {
+  position: absolute;
+  top: 85%;
+
+  display: flex;
+  justify-content: center;
+
+  gap: 10px;
+
+  margin-left: 7vw;
+}
+
+.new-todo > input {
+  width: 500px;
+  height: 30px;
+
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.new-todo > button {
+  width: 35px;
+  height: 30px;
+
+  border-radius: 10px;
+  border: 1px solid black;
+
+  background-color: rgb(255, 199, 153);
+
+  font-size: larger;
+
+  cursor: pointer;
 }
 
 footer {
@@ -52,6 +122,6 @@ footer {
   top: 93.3%;
 
   height: 50px;
-  background-color: rgba(223, 153, 255, 0.788);
+  background-color: rgb(255, 199, 153);
   width: 100%;
 }
