--- a/week1/velog-clone/velogCloneStyle.css
+++ b/week1/velog-clone/velogCloneStyle.css
@@ -1,11 +1,56 @@
 * {
-  color: white;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #121212;
+  display: flex;
+  flex-direction: column;
+
+  width: 1024px;
+  height: 100vh;
+
+  margin: auto;
 }
 
 header {
   display: flex;
+  justify-content: space-between;
+}
+
+.menu-section {
+  display: flex;
+  width: 172px;
+  height: 40px;
+}
+
+nav {
+  display: flex;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+article.article-card {
+  width: 320px;
+  height: 377px;
+
+  margin: 10px;
+
+  border-radius: 4px;
+  box-shadow: rgb(0 0 0 / 4%) 0px 4px 16px 0px;
+}
+
+div.article-img-wrapper {
+  width: 320px;
+  height: 167px;
+  overflow: hidden;
+}
+
+img.article-img {
+  width: 320px;
+  position: relative;
+  bottom: 85px;
 }
