--- a/week1/velog-clone/velogCloneStyle.css
+++ b/week1/velog-clone/velogCloneStyle.css
@@ -28,7 +28,7 @@ header > h1 {
   font-size: 24px;
 }
 
-section.menu-section {
+section.header__menu-section {
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -37,14 +37,14 @@ section.menu-section {
   height: 40px;
 }
 
-section.menu-section > img {
+section.header__menu-section > img {
   width: 24px;
   height: 24px;
 
   margin-right: 8px;
 }
 
-section.menu-section > button {
+section.header__menu-section > button {
   width: 80px;
   height: 32px;
 
@@ -60,19 +60,33 @@ section.menu-section > button {
 nav {
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
 
   margin-top: 24px;
 
+  width: 224px;
   height: 48px;
 
   font-size: 18px;
+
+  color: #212529;
 }
 
 nav > div {
   display: flex;
+  align-items: center;
 }
 
-img.nav_icon {
+nav > div > img {
+  margin-right: 5px;
+}
+
+nav > div > span {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+img.nav__icon {
   width: 24px;
   height: 24px;
 }
@@ -86,7 +100,7 @@ main {
   padding-bottom: 32px;
 }
 
-article.article-card {
+article.article__card {
   width: 320px;
   height: 377px;
 
@@ -99,12 +113,12 @@ article.article-card {
   cursor: pointer;
 }
 
-article.article-card:hover {
+article.article__card:hover {
   transform: translateY(-8px);
   box-shadow: rgb(0 0 0 / 8%) 0px 12px 20px 0px;
 }
 
-div.article-img-wrapper {
+div.article__img-wrapper {
   width: 320px;
   height: 167px;
   overflow: hidden;
@@ -112,35 +126,35 @@ div.article-img-wrapper {
   border-radius: 4px 4px 0px 0px;
 }
 
-img.article-img {
+img.article__img {
   width: 320px;
   position: relative;
   bottom: 85px;
 }
 
-div.article_text-wrapper {
+div.article__text-wrapper {
   padding: 16px;
 }
 
-.article_text-wrapper > h2 {
+.article__text-wrapper > h2 {
   margin-bottom: 4px;
 
   font-size: 16px;
 }
 
-.article_text-wrapper > p.article_text-content {
+.article__text-wrapper > p.article__text-content {
   margin-bottom: 24px;
   height: 63px;
 
   font-size: 14px;
 }
 
-.article_text-wrapper > span {
+.article__text-wrapper > span {
   font-size: 12px;
   color: #868e96;
 }
 
-.article_detail-info {
+.article__detail-info {
   display: flex;
   justify-content: space-between;
 
@@ -151,12 +165,12 @@ div.article_text-wrapper {
   font-size: 12px;
 }
 
-.article_writer-info {
+.article__writer-info {
   display: flex;
   align-items: center;
 }
 
-.article_writer-info > img {
+.article__writer-info > img {
   width: 24px;
   height: 24px;
 
@@ -165,20 +179,20 @@ div.article_text-wrapper {
   border-radius: 20px;
 }
 
-.article_writer-info > span {
+.article__writer-info > span {
   color: #868e96;
 }
 
-.article_writer-info > span > b {
+.article__writer-info > span > b {
   color: #212529;
 }
 
-.article_like {
+.article__like {
   display: flex;
   align-items: center;
 }
 
-.article_like > img {
+.article__like > img {
   width: 12px;
 
   margin-right: 8px;
