chore : 섹션별 width 지정

--- a/week2/todo-list/TodoListStyle.css
+++ b/week2/todo-list/TodoListStyle.css
@@ -52,6 +52,11 @@ main > section {
 
 main > .left-section {
   border-right: 2px solid black;
+  width: 100%;
+}
+
+main > .right-section {
+  width: 100%;
 }
 
 ul {
