--- a/week2/velog-clone/write.css
+++ b/week2/velog-clone/write.css
@@ -1,14 +1,27 @@
 body {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
   background-color: #f8f9fa;
 }
 
-input {
-  height: 30px;
-
-  border: none;
+.tag-list {
+  display: flex;
+  list-style: none;
 }
 
-input::placeholder {
+.tag {
+}
+
+input {
+  width: 150px;
+  height: 30px;
+
+  padding: 2px 8px 2px 8px;
+
   font-size: large;
   font-weight: 600;
+
+  border: none;
 }
