--- a/week2/velog-clone/write.css
+++ b/week2/velog-clone/write.css
@@ -1,7 +1,6 @@
 body {
   display: flex;
   align-items: center;
-  gap: 8px;
 
   background-color: #f8f9fa;
 }
@@ -12,16 +11,38 @@ body {
 }
 
 .tag {
+  background-color: #5aecb48a;
+  color: #212529;
+
+  margin-left: 8px;
+  margin-right: 10px;
+  padding: 4px 18px 4px 18px;
+
+  border-radius: 16px;
+
+  font-size: large;
+  font-weight: 600;
+
+  cursor: pointer;
+}
+
+.tag:hover {
+  background-color: #5aecb4da;
 }
 
 input {
   width: 150px;
   height: 30px;
 
-  padding: 2px 8px 2px 8px;
+  padding: 4px 18px 4px 18px;
 
   font-size: large;
   font-weight: 600;
 
-  border: none;
+  border: 2px solid #868e96;
+  border-radius: 16px;
+}
+
+input::placeholder {
+  font-size: 18px;
 }
